[gd_scene load_steps=6 format=3 uid="uid://b4sjqmxxive3p"]

[ext_resource type="Script" uid="uid://cw77seiowm3nq" path="res://menus/start_menu/start_menu.gd" id="1_2u4vx"]
[ext_resource type="PackedScene" uid="uid://dd2kfb0603a08" path="res://menus/start_menu/bullet_background.tscn" id="2_background"]
[ext_resource type="Texture2D" uid="uid://pxp1o7u1i4hs" path="res://menus/start_menu/bullet_buffet_big.png" id="3_ct3sm"]
[ext_resource type="AudioStream" uid="uid://barrbgjfpyf26" path="res://audio/menu/Blip12.wav" id="4_12nag"]
[ext_resource type="AudioStream" uid="uid://dxy5hiji5ak8b" path="res://audio/menu/Hit24.wav" id="5_y17qs"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2u4vx")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.427451, 0.101961, 0.239216, 1)

[node name="BulletBackground" parent="." instance=ExtResource("2_background")]

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(658, 353)
texture = ExtResource("3_ct3sm")

[node name="Title" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 64
text = "BULLET BUFFET"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 13
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 121.0
offset_right = 200.0
offset_bottom = 319.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Start Game"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Credits"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="AudioMenuover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_12nag")

[node name="AudioMenuclick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_y17qs")

[connection signal="mouse_entered" from="VBoxContainer/StartButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/CreditsButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_button_mouse_entered"]
